...
            layout="@layout/view_detail_description_container"
            android:id="@+id/description_container" />

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/bt_empty_beer"
        style="@style/DetailButtonLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_barrel"
        app:layout_anchor="@id/nested_scroll"
        app:layout_anchorGravity="bottom" />
...
